Fix homepage spacing.

--- a/app/assets/stylesheets/layout/_common.scss
+++ b/app/assets/stylesheets/layout/_common.scss
@@ -10,6 +10,7 @@
 
 .l-container--body {
   margin-top: $bl*7;
+  margin-bottom: $bl*7;
   background:$color-white;
 }
 
